feature: introduce v2 go-gin-template (#36)
