# swagger/swagger.yaml
@@ -9,6 +9,23 @@ definitions:
       msg:
         type: string
     type: object
+  v1.CommonParam:
+    properties:
+      param1:
+        description: param1, max 255 words
+        maxLength: 255
+        minLength: 10
+        type: string
+      param2:
+        description: param2, required
+        type: string
+      paramEmail:
+        description: param3, if it's null, validate nothing. if it's not null, must
+          match email regex
+        type: string
+    required:
+    - param2
+    type: object
 info:
   contact:
     email: axiangcoding@gmail.com
@@ -18,6 +35,50 @@ info:
   title: 安东星
   version: 1.0.0
 paths:
+  /v1/demo/get:
+    get:
+      parameters:
+      - description: param1, max 255 words
+        in: query
+        maxLength: 255
+        minLength: 10
+        name: param1
+        type: string
+      - description: param2, required
+        in: query
+        name: param2
+        required: true
+        type: string
+      - description: param3, if it's null, validate nothing. if it's not null, must
+          match email regex
+        in: query
+        name: paramEmail
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/app.ApiJson'
+      summary: Demo for Get
+      tags:
+      - Demo API
+  /v1/demo/post:
+    post:
+      parameters:
+      - description: getParam
+        in: body
+        name: param
+        required: true
+        schema:
+          $ref: '#/definitions/v1.CommonParam'
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/app.ApiJson'
+      summary: Demo for Post
+      tags:
+      - Demo API
   /v1/system/info:
     get:
       responses:
